--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "antd": "^5.27.4",
+    "onnxruntime-web": "^1.23.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "vite-plugin-static-copy": "^3.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
